@@ -208,6 +208,8 @@ this. Was used when mwEmbed was going to be an extension.
   database connection and query errors.
 * (bug 19646) New hook: ImgAuthBeforeStream for tests and functionality before file is streamed to user, but only when using img_auth
 * Show change block / unblock link on Special:Contributions if user is blocked
+* Display note on Special:Contributions if the user is blocked, and provide an 
+  excerpt from the block log.
 
 === Bug fixes in 1.16 ===
 
